fixed spacing?

--- a/html/css/tabs.css
+++ b/html/css/tabs.css
@@ -33,3 +33,9 @@ ul.tabs {
 	margin: 0;
 	padding: 0;
 }
+
+.tabcode {
+	background: #f8f8f8; 
+	padding: 5px 10px 5px 10px;
+	border: 1px solid #CCC;
+}
